--- a/WooCommerce/Classes/ViewRelated/ReusableViews/DatePickerTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/DatePickerTableViewCell.xib
@@ -24,6 +24,9 @@
                         <date key="date" timeIntervalSinceReferenceDate="576399034.57476199">
                             <!--2019-04-08 06:50:34 +0000-->
                         </date>
+                        <connections>
+                            <action selector="dateChanged:" destination="KGk-i7-Jjw" eventType="valueChanged" id="5QC-MP-oPB"/>
+                        </connections>
                     </datePicker>
                 </subviews>
             </tableViewCellContentView>
