Apply borders to “button"

--- a/WooCommerce/Classes/ViewRelated/ReusableViews/EmptyListMessageWithActionView.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/EmptyListMessageWithActionView.xib
@@ -25,7 +25,7 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lfm-8q-CzH">
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lfm-8q-CzH" customClass="BordersView" customModule="WooCommerce" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="44.5" width="375" height="48"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgi-it-aQ1">
