--- a/WooCommerce/Classes/ViewRelated/ReusableViews/EmptyListMessageWithActionView.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/EmptyListMessageWithActionView.xib
@@ -16,8 +16,8 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="uQE-ll-SpT">
-                    <rect key="frame" x="0.0" y="297.5" width="375" height="92.5"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="uQE-ll-SpT">
+                    <rect key="frame" x="0.0" y="135" width="375" height="92.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ldr-2h-SOT">
                             <rect key="frame" x="166.5" y="0.0" width="42" height="20.5"/>
@@ -28,8 +28,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lfm-8q-CzH" customClass="BordersView" customModule="WooCommerce" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="44.5" width="375" height="48"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgi-it-aQ1">
-                                    <rect key="frame" x="15" y="14" width="344" height="21"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgi-it-aQ1">
+                                    <rect key="frame" x="16" y="14" width="343" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -38,9 +38,10 @@
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="Mgi-it-aQ1" secondAttribute="trailing" constant="16" id="fDu-ac-2KI"/>
+                                <constraint firstItem="Mgi-it-aQ1" firstAttribute="top" secondItem="Lfm-8q-CzH" secondAttribute="top" constant="14" id="iZo-y8-TIo"/>
                                 <constraint firstAttribute="height" constant="48" id="jtx-gb-DND"/>
+                                <constraint firstAttribute="bottom" secondItem="Mgi-it-aQ1" secondAttribute="bottom" constant="13" id="ltl-Gt-ebO"/>
                                 <constraint firstItem="Mgi-it-aQ1" firstAttribute="leading" secondItem="Lfm-8q-CzH" secondAttribute="leading" constant="16" id="ubc-Eh-WQT"/>
-                                <constraint firstItem="Mgi-it-aQ1" firstAttribute="centerY" secondItem="Lfm-8q-CzH" secondAttribute="centerY" id="yJ8-PA-VZ2"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -54,7 +55,7 @@
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="uQE-ll-SpT" secondAttribute="trailing" id="DEf-bQ-ufE"/>
                 <constraint firstItem="uQE-ll-SpT" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Jg1-hi-PCG"/>
-                <constraint firstItem="uQE-ll-SpT" firstAttribute="top" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="top" constant="115" id="hHv-1W-iP1"/>
+                <constraint firstItem="uQE-ll-SpT" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="115" id="hHv-1W-iP1"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="uQE-ll-SpT" secondAttribute="bottom" priority="750" constant="20" id="yDN-yi-0Di"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
