Fixed an invalid constraint constant

--- a/WooCommerce/Classes/ViewRelated/Products/ProductDetailsViewController.xib
+++ b/WooCommerce/Classes/ViewRelated/Products/ProductDetailsViewController.xib
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sWt-Ef-Hwo">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="dtH-l3-88d"/>
@@ -35,7 +35,7 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="sWt-Ef-Hwo" secondAttribute="bottom" id="25y-U1-tbo"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="sWt-Ef-Hwo" secondAttribute="trailing" id="8Sd-ON-WDx"/>
                 <constraint firstItem="sWt-Ef-Hwo" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="8nn-Dz-R2D"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="top" secondItem="sWt-Ef-Hwo" secondAttribute="top" constant="20" id="e1T-g5-2zR"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="top" secondItem="sWt-Ef-Hwo" secondAttribute="top" id="e1T-g5-2zR"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
         </view>
