--- a/WooCommerce/Classes/ViewRelated/ReusableViews/LargeImageTableViewCell.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/LargeImageTableViewCell.xib
@@ -12,17 +12,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="200" id="KGk-i7-Jjw" customClass="LargeImageTableViewCell" customModule="WooCommerce" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="372" id="KGk-i7-Jjw" customClass="LargeImageTableViewCell" customModule="WooCommerce" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="372"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="199.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="371.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ncP-hz-Oe9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="374"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="200" id="mUj-Z1-BpJ"/>
+                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="374" id="b4h-dU-qzb"/>
+                            <constraint firstAttribute="height" priority="999" constant="374" id="mUj-Z1-BpJ"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -38,7 +39,7 @@
                 <outlet property="mainImageView" destination="ncP-hz-Oe9" id="Bi5-iL-CTO"/>
                 <outlet property="topConstraint" destination="oFt-gA-BbB" id="iXf-N6-UnK"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="204.91071428571428"/>
+            <point key="canvasLocation" x="137.68115942028987" y="262.5"/>
         </tableViewCell>
     </objects>
 </document>
